# Antigravity-Manager

./: build-and-push.sh  pull-deploy.sh
.github/workflows/: deploy-pages.yml  release.yml
docker/: Dockerfile
src-tauri/: Cargo.toml
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  cloudflared.rs  mod.rs  proxy.rs  proxy_pool.rs  security.rs  user_token.rs
src-tauri/src/models/: config.rs
src-tauri/src/modules/: account_service.rs  cloudflared.rs  http_api.rs  integration.rs  log_bridge.rs  mod.rs  oauth_server.rs  scheduler.rs
src-tauri/src/proxy/: cli_sync.rs  droid_sync.rs  mod.rs  monitor.rs  opencode_sync.rs  server.rs  service.rs
src/components/common/: BackgroundTaskRunner.tsx
src/locales/: en.json  zh.json
src/pages/: Settings.tsx
